# pycsvj

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/csvj/: __init__.py
tests/: test_csvj.py  test_placeholder.py
tests/conformance/: test_conformance.py
