[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycsvj"
version = "0.1.0"
description = "Python reader/writer for CSVJ files (https://csvj.org)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["csvj", "csv", "json", "tabular"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup",
]

[project.urls]
Homepage = "https://csvj.org"
Repository = "https://github.com/csvj-org/pycsvj"
Issues = "https://github.com/csvj-org/pycsvj/issues"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["src/csvj"]

[tool.hatch.build.targets.sdist]
include = ["src/csvj", "tests", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
